@@ -1,3 +1,7 @@
+2001-10-14  Ross Golder  <ross@golder.org>
+
+	* gconf.spec.in: updated installation paths
+
 2001-10-14  Havoc Pennington  <hp@redhat.com>
 
 	* configure.in: bump version, increment GCONF_CURRENT
